[package]
name = "solana-axum-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bs58 = "0.4"
solana-sdk = "1.18.0"
solana-program = "1.18.0"
spl-token = "3.5.0"
ed25519-dalek = "1.0.1"
